# ComfyUI_sloppy-comic

./: README.md  __init__.py  pyproject.toml  requirements.txt  workflow.json
nodes/: nodes.py
